Each scenario execution now wrapped into suite setup#1